# hrob2021

./: .gitignore  .htaccess  flake.nix  hrob2021-potkavarnauhavrana-cz.cabal  hrob2021-potkavarnauhavrana-cz.nix  hrob2025-potkavarnauhavrana-cz.cabal  hrob2025-potkavarnauhavrana-cz.nix  readme.md
.github/workflows/: main.yml
pages/cs/: @menu.md  fota.md  index.md  pocasi.md  rozpis.md  vysledky.md
pages/en/: @menu.md  bulletin.md  bulletin_2021.md  index.md  photos.md  results.md  weather.md
pages/files/: E1.html  E2.html  approval_18.docx  e1vse.html  e2vse.html  mezicasy.html  souhlas_18.docx
scripts/: jquery.fancybox.min.js  main.js
src/: site.hs
styles/: default.css
templates/: layout.html
