name: hrob2025-potkavarnauhavrana-cz
version: 0.0.1
build-type: Simple
cabal-version: >= 1.10

executable site
    main-is: site.hs
    hs-source-dirs: src
    build-depends:
        base >= 4.8 && < 4.15,
        containers >= 0.5 && < 0.7,
        hakyll >= 4.9 && < 4.14,
        hakyll-contrib-tojnar >= 0.0.1 && < 0.0.5,
        filepath >= 1.4 && < 1.5,
        pandoc >= 2.0 && < 2.12
    ghc-options: -threaded -Wall -fno-warn-tabs
    default-language: Haskell2010
